// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCommentEvent is rendered 1`] = `
<figure
  class="euiCommentEvent testClass1 testClass2 css-1vw1i3u-euiCommentEvent-regular"
>
  <figcaption
    class="euiCommentEvent__header css-397e40-euiCommentEvent__header"
  >
    <div
      class="euiCommentEvent__headerData css-1l51d77-euiCommentEvent__headerData"
    >
      <div
        class="euiCommentEvent__headerUsername css-10865x4-euiCommentEvent__headerUsername"
      >
        someuser
      </div>
      <div
        class="euiCommentEvent__headerEvent"
      />
    </div>
  </figcaption>
</figure>
`;

exports[`EuiCommentEvent props event is rendered 1`] = `
<figure
  class="euiCommentEvent css-1vw1i3u-euiCommentEvent-regular"
>
  <figcaption
    class="euiCommentEvent__header css-397e40-euiCommentEvent__header"
  >
    <div
      class="euiCommentEvent__headerData css-1l51d77-euiCommentEvent__headerData"
    >
      <div
        class="euiCommentEvent__headerUsername css-10865x4-euiCommentEvent__headerUsername"
      >
        someuser
      </div>
      <div
        class="euiCommentEvent__headerEvent"
      >
        commented
      </div>
    </div>
  </figcaption>
</figure>
`;

exports[`EuiCommentEvent props timestamp is rendered 1`] = `
<figure
  class="euiCommentEvent css-1vw1i3u-euiCommentEvent-regular"
>
  <figcaption
    class="euiCommentEvent__header css-397e40-euiCommentEvent__header"
  >
    <div
      class="euiCommentEvent__headerData css-1l51d77-euiCommentEvent__headerData"
    >
      <div
        class="euiCommentEvent__headerUsername css-10865x4-euiCommentEvent__headerUsername"
      >
        someuser
      </div>
      <div
        class="euiCommentEvent__headerEvent"
      />
      <div
        class="euiCommentEvent__headerTimestamp"
      >
        <time>
          21 days ago
        </time>
      </div>
    </div>
  </figcaption>
</figure>
`;

exports[`EuiCommentEvent props type custom is rendered 1`] = `
<div
  class="euiCommentEvent css-p2ten8-euiCommentEvent-custom"
/>
`;

exports[`EuiCommentEvent props type regular is rendered 1`] = `
<figure
  class="euiCommentEvent css-1vw1i3u-euiCommentEvent-regular"
>
  <figcaption
    class="euiCommentEvent__header css-397e40-euiCommentEvent__header"
  >
    <div
      class="euiCommentEvent__headerData css-1l51d77-euiCommentEvent__headerData"
    >
      <div
        class="euiCommentEvent__headerUsername css-10865x4-euiCommentEvent__headerUsername"
      >
        someuser
      </div>
      <div
        class="euiCommentEvent__headerEvent"
      />
    </div>
  </figcaption>
</figure>
`;

exports[`EuiCommentEvent props type update is rendered 1`] = `
<div
  class="euiCommentEvent css-krcl3t-euiCommentEvent-update"
>
  <div
    class="euiPanel euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow css-cylma9-euiCommentEvent__updatePanel"
  >
    <div
      class="euiCommentEvent__header css-397e40-euiCommentEvent__header"
    >
      <div
        class="euiCommentEvent__headerData css-1l51d77-euiCommentEvent__headerData"
      >
        <div
          class="euiCommentEvent__headerUsername css-10865x4-euiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="euiCommentEvent__headerEvent"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCommentEvent props updateColor is rendered 1`] = `
<figure
  class="euiCommentEvent css-1vw1i3u-euiCommentEvent-regular"
>
  <figcaption
    class="euiCommentEvent__header css-397e40-euiCommentEvent__header"
  >
    <div
      class="euiCommentEvent__headerData css-1l51d77-euiCommentEvent__headerData"
    >
      <div
        class="euiCommentEvent__headerUsername css-10865x4-euiCommentEvent__headerUsername"
      >
        someuser
      </div>
      <div
        class="euiCommentEvent__headerEvent"
      />
    </div>
  </figcaption>
</figure>
`;

exports[`EuiCommentEvent props updateIcon is rendered 1`] = `
<figure
  class="euiCommentEvent css-1vw1i3u-euiCommentEvent-regular"
>
  <figcaption
    class="euiCommentEvent__header css-397e40-euiCommentEvent__header"
  >
    <div
      class="euiCommentEvent__headerData css-1l51d77-euiCommentEvent__headerData"
    >
      <div
        class="euiCommentEvent__headerUsername css-10865x4-euiCommentEvent__headerUsername"
      >
        someuser
      </div>
      <div
        class="euiCommentEvent__headerEvent"
      />
    </div>
  </figcaption>
</figure>
`;
